# Image_Lidar_Registration

./: CMakeLists.txt  README.md  package.xml
check/: CMakeLists.txt  check_axis_pose.cpp  check_plane.cpp
config/: camlidarcalib_result.yaml
data/: cornerMap.pcd  cornerMap3.pcd  cornerMap_new.pcd  finalCloud.pcd  surfaceMap.pcd
data/data_test/: cam3_large_view(new).txt  cam3_medium_view.txt  cam3_view.txt
data/data_test/image/: time4.txt
data/dataset1/: cam3_medium_view2.txt  result.txt  result_full.txt
data/dataset1/image/: time3.txt
include/: fisheyeimg.h  frame.h  plane.h  points.h  tracking.h  triangulate.h
src/: extract_indices.cpp  fisheyeimg.cpp  planar_segmentation.cpp  plane_tracking1.cpp  plane_tracking2.cpp  projection_node.cpp  reconstruction.cpp  registration.cpp
src/utils/: show_traj.cpp  tracking.cpp
